# miku-desktop

./: .gitignore  CMakeLists.txt  DESIGN_QT.md  README.md  check.ps1
.github/workflows/: build-qt.yml
assets/: README.md
src/: AnimationEngine.cpp  AnimationEngine.h  PetWindow.cpp  PetWindow.h  main.cpp
src/platform/: mikupet.desktop.in  windows.rc
tools/: generate_icons.py
